# zrc-app

./: .gitignore  README.md  docker-compose.yml
zr-controller-api/: CMakeLists.txt  Dockerfile  init_db.py  main.cpp  requirements.txt
zr-controller-api/app/: __init__.py
zr-controller-api/app/models/: models.py
zr-controller-api/app/routes/: api.py
zr-controller-api/app/zoom_utils/: get_token.py  zoom_funcs.py
zr-controller-api/instance/: config.py
zr-controller-api/zrcsdk/Demo/: CMakeLists.txt  README.md
zr-controller-api/zrcsdk/Demo/include/: ZRCSDKSink.h  sinks.h
zr-controller-api/zrcsdk/Demo/src/: MyZRCSDKApp.cpp  main.cpp
zr-controller-api/zrcsdk/include/: IMeetingService.h  IPhoneCallService.h  IPreMeetingService.h  IProAVService.h  ISettingService.h  IZRCSDK.h  IZoomRoomsService.h  ZRCSDKDefines.h  ZRCSDKTypes.h
zr-controller-api/zrcsdk/include/ServiceComponents/: IBYODHelper.h  IBreakoutRoomHelper.h  ICalibrationHelper.h  ICameraControlHelper.h  IClosedCaptionHelper.h  ICloudWhiteboardHelper.h  IContactHelper.h  IControlSystemHelper.h  IDanteOutputHelper.h  IHWIOHelper.h  IMeetingAudioHelper.h  IMeetingChatHelper.h  IMeetingControlHelper.h  IMeetingListHelper.h  IMeetingPollingHelper.h  IMeetingQAHelper.h  IMeetingReactionEmojiHelper.h  IMeetingReminderHelper.h  IMeetingShareHelper.h  IMeetingVideoHelper.h  IMeetingViewLayoutHelper.h  IMeetingWebinarHelper.h  INDIHelper.h  IParticipantHelper.h  IRecordingHelper.h  ISmartTagHelper.h  IThirdPartyMeetingHelper.h  IVirtualBackgroundHelper.h  IWaitingRoomHelper.h  IWebinarBreakoutRoomHelper.h
(+9 files in other folders)
